snapshots/edgehog_device_runtime__file_transfer__interface__tests__from_and_to_event_download.snap
---
source: src/file_transfer/interface/mod.rs
expression: data
---
AstarteObject {
    inner: [
        (
            "id",
            String(
                "6389218e-0e05-4587-96e3-3e6e2b522a2b",
            ),
        ),
        (
            "url",
            String(
                "https://s3.example.com",
            ),
        ),
        (
            "encoding",
            String(
                "tar.gz",
            ),
        ),
        (
            "fileSizeBytes",
            LongInteger(
                4096,
            ),
        ),
        (
            "digest",
            String(
                "sha256:28babb1cdf8aea6b62acc1097fdc83482cbf6e11c4fe7dcb39ae1682776baec5",
            ),
        ),
        (
            "destinationType",
            String(
                "storage",
            ),
        ),
        (
            "destination",
            String(
                "testfile.txt",
            ),
        ),
        (
            "httpHeaderKeys",
            StringArray(
                [
                    "authorization",
                ],
            ),
        ),
        (
            "httpHeaderValues",
            StringArray(
                [
                    "Bearer tXYBVo1eA+8MTQTgFovzb9/nKej1d7zS4/k64l3Tm7tOkzxGemBJqDKN5lhEr1ARkb6AXpMqRc6FKo3kk800kA==",
                ],
            ),
        ),
        (
            "progress",
            Boolean(
                true,
            ),
        ),
        (
            "ttlSeconds",
            LongInteger(
                0,
            ),
        ),
        (
            "fileMode",
            LongInteger(
                544,
            ),
        ),
        (
            "userId",
            LongInteger(
                1000,
            ),
        ),
        (
            "groupId",
            LongInteger(
                100,
            ),
        ),
    ],
}
