snapshots/edgehog_device_runtime__file_transfer__interface__tests__from_and_to_event_upload.snap
---
source: src/file_transfer/interface/mod.rs
expression: data
---
AstarteObject {
    inner: [
        (
            "id",
            String(
                "6389218e-0e05-4587-96e3-3e6e2b522a2b",
            ),
        ),
        (
            "url",
            String(
                "https://s3.example.com",
            ),
        ),
        (
            "encoding",
            String(
                "tar.gz",
            ),
        ),
        (
            "sourceType",
            String(
                "storage",
            ),
        ),
        (
            "source",
            String(
                "6389218e-0e05-4587-96e3-3e6e2b522a2b",
            ),
        ),
        (
            "httpHeaderKeys",
            StringArray(
                [
                    "authorization",
                ],
            ),
        ),
        (
            "httpHeaderValues",
            StringArray(
                [
                    "Bearer tXYBVo1eA+8MTQTgFovzb9/nKej1d7zS4/k64l3Tm7tOkzxGemBJqDKN5lhEr1ARkb6AXpMqRc6FKo3kk800kA==",
                ],
            ),
        ),
        (
            "progress",
            Boolean(
                true,
            ),
        ),
    ],
}
